Organize API / Implement protocol validator
